--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -187,3 +187,33 @@ main section{
 .resume button{
     margin-top: 50px;
 }
+.download-icon{
+    margin-right: 5px;
+}
+
+/* footer styles  */
+.footer-styles{
+    display: flex;
+    max-width: 1600px;
+    height: 780px;
+    margin: 206px auto;
+    align-items: center;
+    justify-content: space-around;
+}
+
+.footer-column a img{
+    margin: 10px;
+    
+}
+input ,textarea{
+    color: #757575;
+    border-radius: 5px;
+    border: none;
+    
+}
+footer input[type="text"],[type="email"]{
+    height: 64px;
+    width: 461px;
+    
+    background-color: white;
+}
